--- a/src/scss/components/checkout/checkoutCart/_checkoutCart.scss
+++ b/src/scss/components/checkout/checkoutCart/_checkoutCart.scss
@@ -29,7 +29,7 @@
 // -----------------------------------------------------------------------------
 
 .cart-header {
-    display: table;
+    display: block;
     padding: $checkoutCart-padding;
     width: 100%;
 }
